--- a/index.html
+++ b/index.html
@@ -5,19 +5,17 @@
 	<title> Tea Cozy </title>
 </head>
 <body>
-
 <!--Header-->
 <header>
 	<div class="logo">
-	<img src="resources/images/tea-cozy-logo.png">
+		<img src="resources/images/tea-cozy-logo.png">
 	</div>
-		<nav class="header-links">
-			<span> <a href="#mission"> Mission </a> </span>
-			<span> <a href="#featured tea"> Featured Tea </a> </span>
-			<span> <a href="#locations"> Locations </a> </span>
-		</nav>
+	<nav class="buttons">
+		<span><a href="#mission"> Mission </a></span>
+		<span><a href="#featured tea"> Featured Tea</a></span>
+		<span><a href="#locations"> Locations </a></span>
+	</nav>
 </header>
-
 <!--Footer-->
 <footer>
 </footer>
