--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!--Header-->
 <header>
 	<div class="logo">
-		<img src="resources/images/tea-cozy-logo.png">
+		<a href="#"><img src="resources/images/tea-cozy-logo.png"></a>
 	</div>
 	<nav class="buttons">
 		<span><a href="#mission"> Mission </a></span>
@@ -16,6 +16,16 @@
 		<span><a href="#locations"> Locations </a></span>
 	</nav>
 </header>
+<!--Main Content-->
+<div class="main-section">
+<!--Mission section-->
+	<div id="mission" class="flex-container">
+		<div class="content">
+			<h2>Our Mission</h2>
+			<h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+		</div>
+	</div>
+</div>
 <!--Footer-->
 <footer>
 </footer>
