--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</div>
 	<nav class="buttons">
 		<span><a href="#mission"> Mission </a></span>
-		<span><a href="#featured tea"> Featured Tea</a></span>
+		<span><a href="#tea"> Featured Tea</a></span>
 		<span><a href="#locations"> Locations </a></span>
 	</nav>
 </header>
@@ -23,6 +23,33 @@
 		<div class="content">
 			<h2>Our Mission</h2>
 			<h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+		</div>
+	</div>
+</div>
+<!--Items section-->
+<div class="teas-section">
+	<h2>Tea of the Month</h2>
+	<h4>What's Steeping at The Tea Cozy?</h4>
+	<div class="flex-container teas">
+		<div id="tea" class="teas">
+			<img src="resources/images/img-berryblitz.jpg">
+			<span>Fall Berry Blitz Tea</span>
+		</div>
+		<div class="teas">
+			<img src="resources/images/img-spiced-rum.jpg">
+			<span>Spiced Rum Tea</span>
+		</div>
+		<div class="teas">
+			<img src="resources/images/img-donut.jpg">
+			<span>Seasonal Donut</span>
+		</div>
+		<div class="teas">
+			<img src="resources/images/img-myrtle-ave.jpg">
+			<span>Myrtle Ave Tea</span>
+		</div>
+		<div class="teas">
+			<img src="resources/images/img-bedford-bizarre.jpg">
+			<span>Bedford Bizarre Tea</span>
 		</div>
 	</div>
 </div>
