--- a/index.html
+++ b/index.html
@@ -25,36 +25,68 @@
 			<h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
 		</div>
 	</div>
-</div>
-<!--Items section-->
-<div class="teas-section">
-	<h2>Tea of the Month</h2>
-	<h4>What's Steeping at The Tea Cozy?</h4>
-	<div class="flex-container teas">
-		<div id="tea" class="teas">
-			<img src="resources/images/img-berryblitz.jpg">
-			<span>Fall Berry Blitz Tea</span>
+<!--Teas section-->
+	<div id="tea" class="teas-section">
+		<h2>Tea of the Month</h2>
+		<h4>What's Steeping at The Tea Cozy?</h4>
+		<div class="flex-container teas">
+			<div class="teas">
+				<img src="resources/images/img-berryblitz.jpg">
+				<span>Fall Berry Blitz Tea</span>
+			</div>
+			<div class="teas">
+				<img src="resources/images/img-spiced-rum.jpg">
+				<span>Spiced Rum Tea</span>
+			</div>
+			<div class="teas">
+				<img src="resources/images/img-donut.jpg">
+				<span>Seasonal Donut</span>
+			</div>
+			<div class="teas">
+				<img src="resources/images/img-myrtle-ave.jpg">
+				<span>Myrtle Ave Tea</span>
+			</div>
+			<div class="teas">
+				<img src="resources/images/img-bedford-bizarre.jpg">
+				<span>Bedford Bizarre Tea</span>
+			</div>
 		</div>
-		<div class="teas">
-			<img src="resources/images/img-spiced-rum.jpg">
-			<span>Spiced Rum Tea</span>
-		</div>
-		<div class="teas">
-			<img src="resources/images/img-donut.jpg">
-			<span>Seasonal Donut</span>
-		</div>
-		<div class="teas">
-			<img src="resources/images/img-myrtle-ave.jpg">
-			<span>Myrtle Ave Tea</span>
-		</div>
-		<div class="teas">
-			<img src="resources/images/img-bedford-bizarre.jpg">
-			<span>Bedford Bizarre Tea</span>
+	</div>
+<!--Locations Section-->
+	<div id="locations">
+		<h2>Locations</h2>
+		<div class="flex-container locations">
+			<div class="location">
+				<h3>Downtown</h3>
+				<p>384 West 4th St</p>
+				<p>Suite 108</p>
+				<p>Portland, Maine</p>
+			</div>
+			<div class="location">
+				<h3>East Bayside</h3>
+				<p>3433 Phisherman's Avenue</p>
+				<p>(Northwest Corner)</p>
+				<p>Portland, Maine</p>
+			</div>
+			<div class="location">
+				<h3>Oakdale</h3>
+				<p>515 Crescent Avenue</p>
+				<p>Second Floor</p>
+				<p>Portland, Maine</p>
+			</div>
 		</div>
 	</div>
 </div>
 <!--Footer-->
 <footer>
+	<div class="info">
+		<h2>The Tea Cozy</h2>
+		<h5>contact@theteacozy.com</h5>
+		<h5>917-555-8904</h5>
+	</div>
+	<div class="copyright">
+		<p>© Copyright The Tea Cozy 2017</p>
+	</div>
 </footer>
 </body>
 </html>
